--- a/public/less/base.less
+++ b/public/less/base.less
@@ -34,6 +34,10 @@
 .absolute{
 	position:absolute;
 }
+.fixed{
+	position: fixed;
+	width: 100%;
+}
 .text_center{
 	text-align:center;
 }
@@ -58,14 +62,15 @@
 }
 
 @font-face {
-	font-family: 'iconfont';  /* project id 480732 */
-	 src: url('http://at.alicdn.com/t/font_991405_008ogwwizowcd.eot');
-  src: url('http://at.alicdn.com/t/font_991405_008ogwwizowcd.eot?#iefix') format('embedded-opentype'),
-  url('http://at.alicdn.com/t/font_991405_008ogwwizowcd.woff') format('woff'),
-  url('http://at.alicdn.com/t/font_991405_008ogwwizowcd.ttf') format('truetype'),
-  url('http://at.alicdn.com/t/font_991405_008ogwwizowcd.svg#iconfont') format('svg');
-
+  font-family: 'iconfont';  /* project id 1035847 */
+  src: url('https://at.alicdn.com/t/font_1035847_yd9tglb8cf.eot');
+  src: url('https://at.alicdn.com/t/font_1035847_yd9tglb8cf.eot?#iefix') format('embedded-opentype'),
+  url('https://at.alicdn.com/t/font_1035847_yd9tglb8cf.woff2') format('woff2'),
+  url('https://at.alicdn.com/t/font_1035847_yd9tglb8cf.woff') format('woff'),
+  url('https://at.alicdn.com/t/font_1035847_yd9tglb8cf.ttf') format('truetype'),
+  url('https://at.alicdn.com/t/font_1035847_yd9tglb8cf.svg#iconfont') format('svg');
 }
+
 .iconfont {
 	font-family:"iconfont" !important;
 	font-size:20px;
