--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -5,21 +5,31 @@
 @success: #67C23A;
 @warning: #E6A23C;
 // 文字颜色
-@textc1: #000;
-@textc2: #ff4c15;
+@textc1: #000; 
+@textc2: #fff;
+@textc3: #ff4c15; //红
+@textc4: #0B8DC9; 
 
+
+// 鼠标经过文字颜色
+@hoverc1:#0B8DC9;
 // 边框颜色
 @borderc1: #DCDFE6;
 @borderc2: #E4E7ED;
 @borderc3: #EBEEF5;
 @borderc4: #F2F6FC;
-@borderc5: #409EFF;
+@borderc5: #0B8DC9;
 @borderc6: #3E82EA;
 
 // 背景颜色
-@bgc1:#001e36;
-@bgc2:#1F677F;
+@bgc1:#0B8DC9;
+// @bgc1:rgba(11,141,201,0.8);
+@bgc2:#eeeeee;
 @bgc3:#124e70;
+@bgc4:#ED2E35;
+@bgc5:#26448B;
 
+//按钮颜色
+@btnc1:#0B8DC9;
 
 
