--- a/public/less/base.less
+++ b/public/less/base.less
@@ -60,7 +60,9 @@
 .xyz_btn{
 	width: 100%;
 }
-
+.none{
+	display: none;
+}
 @font-face {
   font-family: 'iconfont';  /* project id 1035847 */
   src: url('https://at.alicdn.com/t/font_1035847_yd9tglb8cf.eot');
