新增登录注册

--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -9,6 +9,7 @@
 @textc2: #fff;
 @textc3: #ff4c15; //红
 @textc4: #0B8DC9; 
+@textc5: #3E82EA; 
 
 
 // 鼠标经过文字颜色
@@ -25,7 +26,7 @@
 @bgc1:#0B8DC9;
 // @bgc1:rgba(11,141,201,0.8);
 @bgc2:#eeeeee;
-@bgc3:#124e70;
+@bgc3:#cccccc;
 @bgc4:#ED2E35;
 @bgc5:#26448B;
 
