--- a/public/less/base.less
+++ b/public/less/base.less
@@ -63,17 +63,21 @@
 .none{
 	display: none;
 }
+.font_bold{
+	font-weight: bold;
+}
+.font_bolder{
+	font-weight: bolder;
+}
 @font-face {
   font-family: 'iconfont';  /* project id 1035847 */
-  src: url('https://at.alicdn.com/t/font_1035847_j9l82k6jxaq.eot');
-  src: url('https://at.alicdn.com/t/font_1035847_j9l82k6jxaq.eot?#iefix') format('embedded-opentype'),
-  url('https://at.alicdn.com/t/font_1035847_j9l82k6jxaq.woff2') format('woff2'),
-  url('https://at.alicdn.com/t/font_1035847_j9l82k6jxaq.woff') format('woff'),
-  url('https://at.alicdn.com/t/font_1035847_j9l82k6jxaq.ttf') format('truetype'),
-  url('https://at.alicdn.com/t/font_1035847_j9l82k6jxaq.svg#iconfont') format('svg');
+  src: url('https://at.alicdn.com/t/font_1035847_ne3azjcnkk.eot');
+  src: url('https://at.alicdn.com/t/font_1035847_ne3azjcnkk.eot?#iefix') format('embedded-opentype'),
+  url('https://at.alicdn.com/t/font_1035847_ne3azjcnkk.woff2') format('woff2'),
+  url('https://at.alicdn.com/t/font_1035847_ne3azjcnkk.woff') format('woff'),
+  url('https://at.alicdn.com/t/font_1035847_ne3azjcnkk.ttf') format('truetype'),
+  url('https://at.alicdn.com/t/font_1035847_ne3azjcnkk.svg#iconfont') format('svg');
 }
-
-
 .iconfont {
 	font-family:"iconfont" !important;
 	font-size:20px;
