--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -21,6 +21,7 @@
 @borderc4: #F2F6FC;
 @borderc5: #0B8DC9;
 @borderc6: #3E82EA;
+@borderc7: #000;
 
 // 背景颜色
 @bgc1:#0B8DC9;
@@ -29,6 +30,7 @@
 @bgc3:#cccccc;
 @bgc4:#ED2E35;
 @bgc5:#26448B;
+@bgc6:#ffffff;
 
 //按钮颜色
 @btnc1:#0B8DC9;
